--- a/render/index.html
+++ b/render/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <button onclick="startSNI()">Start SNI</button>
+    <button id="startSNIButton" onclick="startSNI()">Start SNI</button>
+    <button id="startSNIButton" onclick="startSNI()">Input Viewer</button>
+    <button id="startSNIButton" onclick="startSNI()">EmoTracker</button>
 </body>
 
 </html>
