--- a/render/index.html
+++ b/render/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-    <button id="startSNIButton" onclick="startSNI()">Start SNI</button>
-    <button id="startSNIButton" onclick="startSNI()">Input Viewer</button>
-    <button id="startSNIButton" onclick="startSNI()">EmoTracker</button>
+    <button id="toggleSNIButton" onclick="toggleSNI()">Detecting SNI Instance...</button>
+    <button id="startInputViewerButton" onclick="startInputViewer()">Input Viewer</button>
+    <button id="startTrackerButton" onclick="startTracker()">Tracker</button>
+    <button id="openFuntoonButton" onclick="openFuntoon()">Open Funtoon</button>
 </body>
 
 </html>
