--- a/render/index.html
+++ b/render/index.html
@@ -11,7 +11,14 @@
 </head>
 
 <body>
-
+    <div>
+        <button class="collapsible">SNES Controls</button>
+        <div class="content">
+            <button class="controlbutton" onclick="connectToSnes()">Connect SNES</button>
+            <button class="controlbutton" onclick="resetSnes()">Reset SNES</button>
+            <button class="controlbutton" onclick="resetSnesToMenu()">Reset SNES to Menu</button>
+        </div>
+    </div>
 </body>
 
 </html>
