--- a/render/index.html
+++ b/render/index.html
@@ -20,6 +20,14 @@
             <button class="controlbutton" onclick="connectToSnes()">Connect SNES</button>
             <button class="controlbutton" onclick="resetSnes()">Reset SNES</button>
             <button class="controlbutton" onclick="resetSnesToMenu()">Reset SNES to Menu</button>
+            <pre>
+Livesplit Hotkeys:
+    F1 - Reset
+    F2 - Undo
+    F3 - Pause
+    F4 - Skip
+    F5 - Start/Split
+            </pre>
         </section>
 
         <button class="collapsible active" type="button">Custom Apps</button>
