--- a/render/index.html
+++ b/render/index.html
@@ -17,17 +17,9 @@
 
         <button class="collapsible active" type="button">SNES Controls</button>
         <section class="content">
-            <button class="controlbutton" onclick="connectToSnes()">Connect SNES</button>
             <button class="controlbutton" onclick="resetSnes()">Reset SNES</button>
             <button class="controlbutton" onclick="resetSnesToMenu()">Reset SNES to Menu</button>
-            <pre>
-Livesplit Hotkeys:
-    F1 - Reset
-    F2 - Undo
-    F3 - Pause
-    F4 - Skip
-    F5 - Start/Split
-            </pre>
+            <pre id="SNESControllerNotesBlurb"></pre>
         </section>
 
         <button class="collapsible active" type="button">Custom Apps</button>
