Settings for collapsing and kill child processes of children

--- a/render/index.html
+++ b/render/index.html
@@ -15,14 +15,14 @@
         <button class="all active" type="button">All</button>
 
 
-        <button class="collapsible active" type="button">SNES Controls</button>
+        <button id="SNES Controls" class="collapsible active" type="button">SNES Controls</button>
         <section class="content">
             <button class="controlbutton" onclick="resetSnes()">Reset SNES</button>
             <button class="controlbutton" onclick="resetSnesToMenu()">Reset SNES to Menu</button>
             <pre id="SNESControllerNotesBlurb"></pre>
         </section>
 
-        <button class="collapsible active" type="button">Custom Apps</button>
+        <button id="Custom Apps" class="collapsible active" type="button">Custom Apps</button>
         <section class="content" id="customAppDrawer"></section>
     </div>
 </body>
