--- a/render/gpw3_tower_of_fate/tower_of_fate.html
+++ b/render/gpw3_tower_of_fate/tower_of_fate.html
@@ -15,6 +15,7 @@
         <p id="pb_text">PB: 0</p>
         <p id="current_text">Current Room: 0</p>
         <p id="rooms_needed_text">Rooms Needed: 0</p>
+        <p id="avg_text">Avg (Last Ten Runs): 0</p>
     </div>
 </body>
 
