--- a/src/render/index.html
+++ b/src/render/index.html
@@ -24,6 +24,8 @@
 
         <button id="Custom Apps" class="collapsible active" type="button">Custom Apps</button>
         <section class="content" id="customAppDrawer"></section>
+        <button id="Applets" class="collapsible active" type="button">Applets</button>
+        <section class="content" id="appletDrawer"></section>
     </div>
 </body>
 
