Refactor things and move to typescript (#4)

--- a/src/render/index.html
+++ b/src/render/index.html
@@ -19,11 +19,12 @@
         <section class="content">
             <button class="controlbutton" onclick="resetSnes()">Reset SNES</button>
             <button class="controlbutton" onclick="resetSnesToMenu()">Reset SNES to Menu</button>
-            <pre id="SNESControllerNotesBlurb"></pre>
         </section>
 
         <button id="Custom Apps" class="collapsible active" type="button">Custom Apps</button>
         <section class="content" id="customAppDrawer"></section>
+        <button id="Applets" class="collapsible active" type="button">Applets</button>
+        <section class="content" id="appletDrawer"></section>
     </div>
 </body>
 
