Working on the SM debug panel.  Changes to the usb2snes interface

--- a/src/render/index.html
+++ b/src/render/index.html
@@ -17,8 +17,8 @@
 
         <button id="SNES Controls" class="collapsible active" type="button">SNES Controls</button>
         <section class="content">
-            <button class="controlbutton" onclick="resetSnes()">Reset SNES</button>
-            <button class="controlbutton" onclick="resetSnesToMenu()">Reset SNES to Menu</button>
+            <button class="controlbutton" onclick="snesReset()">Reset SNES</button>
+            <button class="controlbutton" onclick="snesResetToMenu()">Reset SNES to Menu</button>
         </section>
 
         <button id="Custom Apps" class="collapsible active" type="button">Custom Apps</button>
